[gd_scene load_steps=10 format=3 uid="uid://dbg5sas8daj51"]

[ext_resource type="Script" path="res://Menus/game_over_menu.gd" id="1_71oxy"]
[ext_resource type="Texture2D" uid="uid://bjfxaniaog4li" path="res://Art/Backgrounds/5.png" id="1_xtril"]
[ext_resource type="Texture2D" uid="uid://c6qlrmdickyfa" path="res://Art/UserInterfaces/BirdSelectButton.png" id="2_mx7vj"]
[ext_resource type="FontFile" uid="uid://cu25dp320eih4" path="res://Art/Fonts/Kaph-Regular.otf" id="2_rw6xk"]
[ext_resource type="Texture2D" uid="uid://b83kn52sxck67" path="res://Art/UserInterfaces/Continue.png" id="3_30qsl"]
[ext_resource type="AudioStream" uid="uid://cjceu0a2gya3" path="res://Art/Sounds/Ethnic Beat.ogg" id="6_qra8b"]
[ext_resource type="Texture2D" uid="uid://buu85v4q3vyv4" path="res://Art/UserInterfaces/BgLeaderboardName.png" id="6_t5lel"]
[ext_resource type="Texture2D" uid="uid://bx5ur7iixiq3j" path="res://Art/UserInterfaces/RightArrow.png" id="7_s88vg"]

[sub_resource type="Theme" id="Theme_c0mff"]
default_font = ExtResource("2_rw6xk")

[node name="GameOverMenu" type="Node2D"]
script = ExtResource("1_71oxy")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 400.0
offset_bottom = 715.0
texture = ExtResource("1_xtril")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 400.0
offset_right = 800.0
offset_bottom = 715.0
texture = ExtResource("1_xtril")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 800.0
offset_right = 1200.0
offset_bottom = 715.0
texture = ExtResource("1_xtril")

[node name="BirdSelectButton" type="Button" parent="."]
offset_left = 304.0
offset_top = 440.0
offset_right = 408.0
offset_bottom = 543.0
icon = ExtResource("2_mx7vj")

[node name="ContinueButton" type="Button" parent="."]
offset_left = 736.0
offset_top = 440.0
offset_right = 840.0
offset_bottom = 543.0
icon = ExtResource("3_30qsl")

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 216.0
offset_top = 40.0
offset_right = 944.0
offset_bottom = 177.0
theme_override_colors/font_color = Color(0.374139, 0.374139, 0.374139, 1)
theme_override_colors/font_shadow_color = Color(0.929412, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rw6xk")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="Label" type="Label" parent="."]
offset_left = 430.0
offset_top = 184.0
offset_right = 734.0
offset_bottom = 264.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rw6xk")
theme_override_font_sizes/font_size = 64
text = "Score"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
offset_left = 4.0
offset_top = 5.0
offset_right = 253.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rw6xk")
theme_override_font_sizes/font_size = 33
text = "High Score"

[node name="HighScoreNumberLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = 43.0
offset_right = 256.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rw6xk")
theme_override_font_sizes/font_size = 23

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 232.0
offset_top = 272.0
offset_right = 920.0
offset_bottom = 409.0
theme_override_colors/font_color = Color(0.929412, 0, 0.909804, 1)
theme_override_colors/font_shadow_color = Color(0.929412, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rw6xk")
theme_override_font_sizes/font_size = 64
text = "1000"
horizontal_alignment = 1

[node name="HighScoreMenu" type="TextureRect" parent="."]
visible = false
modulate = Color(0.911167, 1, 0.59, 0.980392)
texture_filter = 3
offset_left = 412.0
offset_top = 97.0
offset_right = 740.0
offset_bottom = 370.0
texture = ExtResource("6_t5lel")

[node name="NewHighScore" type="Label" parent="HighScoreMenu"]
layout_mode = 0
offset_top = 18.0
offset_right = 328.0
offset_bottom = 50.0
theme = SubResource("Theme_c0mff")
theme_override_colors/font_color = Color(0.32581, 0.150953, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 26
text = "New High Score!"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="HighScoreMenu"]
layout_mode = 0
offset_top = 55.0
offset_right = 328.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0.9, 0.84, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rw6xk")
theme_override_font_sizes/font_size = 35
text = "{Score}"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScorePlayerNameInput" type="TextEdit" parent="HighScoreMenu"]
layout_mode = 0
offset_left = 49.0
offset_top = 124.0
offset_right = 280.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("2_rw6xk")
placeholder_text = "Enter your name..."
deselect_on_focus_loss_enabled = false
caret_blink = true

[node name="HighScoreSubmitButton" type="Button" parent="HighScoreMenu"]
layout_mode = 0
offset_left = 97.0
offset_top = 181.0
offset_right = 222.0
offset_bottom = 247.0
text = "Save"
icon = ExtResource("7_s88vg")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qra8b")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="BirdSelectButton" to="." method="_on_bird_select_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="HighScoreMenu/HighScoreSubmitButton" to="." method="_on_high_score_submit_button_pressed"]
